# llm-council

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  INTEGRATION_TESTING.md  PROVIDER_PLAN.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini
.taskmaster/: config.json  state.json
.taskmaster/docs/: llm-council.prd
.taskmaster/tasks/: tasks.json
backend/: Dockerfile  config.py  council.py  council_validation.py  export_import.py  llm_client.py  logger.py  main.py  middleware.py  rate_limiter.py  retry.py  storage.py  storage_utils.py  webhook.py
backend/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  models.py  openai_provider.py  openrouter_provider.py  parser.py  perplexity_provider.py  registry.py
backend/routes/: config.py  export_import.py
backend/tests/: README.md  __init__.py  conftest.py  test_export_import.py  test_logger.py  test_middleware.py  test_parser.py  test_rate_limiter.py  test_registry.py  test_retry.py  test_storage_utils.py  test_webhook.py
backend/tests/integration/: .integration_test_checklist.md  FILE_STRUCTURE.md  INTEGRATION_TESTS_SUMMARY.md  README.md  TESTING_GUIDE.md  __init__.py  test_provider_integration.py
frontend/: .dockerignore  Dockerfile  nginx.conf  test_e2e.cjs
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  ExportMenu.css  ExportMenu.jsx  (+10 more)
mcp_server/: __init__.py  __main__.py  server.py
scripts/: diagnose_providers.py  run_integration_tests.sh  test_single_provider.py
(+1 files in other folders)
